velero-cel/validate-cron-schedule/.chainsaw-test/bad-schedule.yaml
apiVersion: velero.io/v1
kind: Schedule
metadata:
  name: badschedule01
spec:
  schedule: 0 7 * * * *
  template:
    includedNamespaces:
    - 'default'
---
apiVersion: velero.io/v1
kind: Schedule
metadata:
  name: badschedule02
spec:
  schedule: 0 7 * */ *
  template:
    includedNamespaces:
    - 'default'
