velero-cel/validate-cron-schedule/.chainsaw-test/good-schedule.yaml
apiVersion: velero.io/v1
kind: Schedule
metadata:
  name: goodsched01
spec:
  schedule: 0 7 * * *
  template:
    includedNamespaces:
    - '*'
    excludedNamespaces:
    - some-namespace
