velero-cel/validate-cron-schedule/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-cron-schedule
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
