velero-cel/validate-cron-schedule/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: validate-cron-schedule
spec:
  steps:
  - name: step-00
    try:
    - assert:
        file: crd-schedule-assert.yaml
  - name: step-01
    try:
    - apply:
        file: ../validate-cron-schedule.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: validate-cron-schedule
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: good-schedule.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-schedule.yaml
